<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	xmlns:tools = "http://schemas.android.com/tools"
	android:id = "@+id/sign_up_layout"
	android:layout_width = "match_parent"
	android:layout_height = "match_parent">

	<android.support.constraint.Guideline
		android:id = "@+id/horizontal_middle_guideline"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:orientation = "horizontal"
		app:layout_constraintGuide_begin = "347dp" />

	<android.support.constraint.Guideline
		android:id = "@+id/vertical_middle_guideline"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:orientation = "vertical"
		app:layout_constraintGuide_begin = "206dp" />

	<ImageButton
		android:id = "@+id/back_button"
		android:layout_width = "48dp"
		android:layout_height = "48dp"
		android:layout_marginStart = "16dp"
		android:layout_marginTop = "16dp"
		android:contentDescription = "@string/back_button"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent"
		tools:srcCompat = "@tools:sample/avatars" />

	<TextView
		android:id = "@+id/title"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "8dp"
		android:layout_marginTop = "64dp"
		android:text = "@string/title_sign_up"
		android:textSize = "36sp"
		app:layout_constraintStart_toStartOf = "@+id/submit_button"
		app:layout_constraintTop_toTopOf = "parent" />

	<TextView
		android:id = "@+id/progress"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "32dp"
		android:layout_marginEnd = "8dp"
		android:text = "@string/progress_sign_up"
		android:textSize = "18sp"
		app:layout_constraintBottom_toBottomOf = "@+id/title"
		app:layout_constraintEnd_toEndOf = "@+id/submit_button"
		app:layout_constraintStart_toEndOf = "@+id/title"
		app:layout_constraintTop_toTopOf = "@+id/title" />

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/email_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginBottom = "16dp"
		app:layout_constraintBottom_toTopOf = "@+id/password_field_layout"
		app:layout_constraintEnd_toEndOf = "@+id/password_field_layout"
		app:layout_constraintStart_toStartOf = "@+id/password_field_layout">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/email_field"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/email_field" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/password_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginBottom = "16dp"
		app:layout_constraintBottom_toTopOf = "@+id/confirm_password_field_layout"
		app:layout_constraintEnd_toEndOf = "@+id/confirm_password_field_layout"
		app:layout_constraintStart_toStartOf = "@+id/confirm_password_field_layout">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/password_field"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/password_field" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/confirm_password_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginBottom = "32dp"
		app:layout_constraintBottom_toTopOf = "@+id/submit_button"
		app:layout_constraintEnd_toEndOf = "@+id/submit_button"
		app:layout_constraintStart_toStartOf = "@+id/submit_button">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/confirm_password_field"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:hint = "@string/confirm_password_field" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id = "@+id/submit_button"
		android:layout_width = "240dp"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "16dp"
		android:layout_marginEnd = "16dp"
		android:layout_marginBottom = "196dp"
		android:text = "@string/submit_button"
		app:layout_constraintBottom_toBottomOf = "parent"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent" />


	<android.support.design.widget.TextInputLayout
		android:id = "@+id/first_name_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "0dp">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/first_name_field"
			android:layout_width = "0dp"
			android:layout_height = "0dp" />
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/last_name_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "0dp">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/last_name_field"
			android:layout_width = "0dp"
			android:layout_height = "0dp" />

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/taxpayer_number_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "0dp">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/taxpayer_number_field"
			android:layout_width = "0dp"
			android:layout_height = "0dp" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id = "@+id/sign_in_button"
		android:layout_width = "0dp"
		android:layout_height = "0dp" />


	<ImageView
		android:id = "@+id/user_type_icon"
		android:layout_width = "0dp"
		android:layout_height = "0dp"
		android:contentDescription = "TODO" />

	<TextView
		android:id = "@+id/user_description"
		android:layout_width = "0dp"
		android:layout_height = "0dp" />

	<Button
		android:id = "@+id/doctor_button"
		android:layout_width = "0dp"
		android:layout_height = "0dp" />

	<Button
		android:id = "@+id/patient_button"
		android:layout_width = "0dp"
		android:layout_height = "0dp" />


	<ImageButton
		android:id = "@+id/profile_picture_button"
		android:layout_width = "0dp"
		android:layout_height = "0dp"
		android:contentDescription = "TODO" />

	<android.support.design.widget.TextInputLayout
		android:id = "@+id/birthday_field_layout"
		android:layout_width = "0dp"
		android:layout_height = "0dp">

		<android.support.design.widget.TextInputEditText
			android:id = "@+id/birthday_field"
			android:layout_width = "0dp"
			android:layout_height = "0dp" />
	</android.support.design.widget.TextInputLayout>

	<ImageButton
		android:id = "@+id/date_picker"
		android:layout_width = "0dp"
		android:layout_height = "0dp"/>

</android.support.constraint.ConstraintLayout>