<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	xmlns:tools = "http://schemas.android.com/tools"
	android:id = "@+id/patiernt_profile_layout"
	android:layout_width = "match_parent"
	android:layout_height = "match_parent"
	tools:context = ".dashboard.doctor.PatientProfileFragment">

	<android.support.constraint.Guideline
		android:id = "@+id/vertical_middle_guideline"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:orientation = "vertical"
		app:layout_constraintGuide_percent = "0.5" />

	<android.support.constraint.Guideline
		android:id = "@+id/horizontal_middle_guideline"
		android:layout_width = "128dp"
		android:layout_height = "128dp"
		android:orientation = "horizontal"
		app:layout_constraintGuide_percent = "0.5" />

	<ImageView
		android:id = "@+id/patient_profile_picture"
		android:layout_width = "128dp"
		android:layout_height = "128dp"
		android:layout_marginStart = "16dp"
		android:layout_marginTop = "16dp"
		android:layout_marginEnd = "16dp"
		android:layout_marginBottom = "16dp"
		app:layout_constraintBottom_toTopOf = "@+id/horizontal_middle_guideline"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "parent"
		tools:src = "@tools:sample/avatars"
		android:contentDescription = "@string/content_description_patient_profile_picture" />

	<TextView
		android:id = "@+id/patient_name"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginStart = "32dp"
		android:layout_marginTop = "16dp"
		android:layout_marginEnd = "24dp"
		android:text = "@string/patient_name"
		android:textAlignment = "center"
		android:textSize = "18sp"
		android:textStyle = "bold"
		app:layout_constraintEnd_toEndOf = "parent"
		app:layout_constraintStart_toStartOf = "parent"
		app:layout_constraintTop_toTopOf = "@+id/horizontal_middle_guideline" />

	<TextView
		android:id = "@+id/patient_taxpayer_number"
		android:layout_width = "0dp"
		android:layout_height = "wrap_content"
		android:layout_marginTop = "16dp"
		android:text = "@string/patient_taxpayer_number"
		android:textAlignment = "center"
		app:layout_constraintEnd_toEndOf = "@+id/patient_name"
		app:layout_constraintHorizontal_bias = "0.607"
		app:layout_constraintStart_toStartOf = "@+id/patient_name"
		app:layout_constraintTop_toBottomOf = "@+id/patient_name" />
</android.support.constraint.ConstraintLayout>